# JLC-Flux2-ControlNet

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTES.md  __init__.py  jlc-structure-mapper.ps1  jlc_flux2_controlnet_versions.py  make-milestone-archive.ps1  pyproject.toml
assets/workflows/: jlc_Flux2_ControlNet_Dev_001.json  jlc_Flux2_ControlNet_Dev_002.json
assets/workflows/Release_1.0.0/: Flux2_ControlNet_RefImages_BASIC_01.json  Flux2_ControlNet_RefImages_Inpaint_workflow.json  jlc_Flux2_ControlNet_Basic_workflow_02.json  (+4 more)
docs/: JLC_Flux2_ControlNet_Technical_Paper.tex  README.md
docs/developer/: architecture.md  repository-layout.md  validation-and-design-history.md
docs/getting-started/: installation.md  quick-start.md  workflows.md
docs/guides/: in-out-painting-experimental.md  inpaint-context-cache-experimental.md  latent-caching.md  multi-controlnet-composition.md  performance-and-memory.md  reference-images.md
docs/legal/: third-party-notes.md
docs/nodes/: cache-preparation.md  conditional-save-image.md  controlnet-orchestrators.md  in-out-paint-adapter-experimental.md  inpaint-context-cache-experimental.md  loader-and-apply.md  reference-image-orchestrator.md
jlc_flux2_controlnet/: composition.py  constants.py  control.py  hint_latent_cache.py  hooks.py  inpaint_context_cache.py  inpaint_control.py  loader.py  model.py  reference_latent_cache.py
nodes/: __init__.py  jlc_conditional_save_image_node.py  jlc_flux2_controlnet_apply_node.py  jlc_flux2_controlnet_inpaint_adapter_node.py  jlc_flux2_controlnet_loader_node.py  jlc_flux2_controlnet_orchestrator_node.py  jlc_flux2_hint_latent_cache_prep_node.py  jlc_flux2_inpaint_context_cache_prep_node.py  jlc_flux2_reference_image_orchestrator_node.py  jlc_flux2_reference_latent_cache_prep_node.py
web/: jlc_flux2_controlnet_icons.js  jlc_flux2_dynamic_slots.js
